WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
283547
LibWebRTCAudioModule does not need to nullify its log timer
https://bugs.webkit.org/show_bug.cgi?id=283547
Summary
LibWebRTCAudioModule does not need to nullify its log timer
youenn fablet
Reported
2024-11-21 23:19:43 PST
LibWebRTCAudioModule::StopPlayback task needs to check whether LibWebRTCAudioModule timer is null
Attachments
Add attachment
proposed patch, testcase, etc.
youenn fablet
Comment 1
2024-11-21 23:20:28 PST
<
rdar://problem/140374869
>
youenn fablet
Comment 2
2024-11-22 01:47:10 PST
<
rdar://problem/140405398
>
EWS
Comment 3
2024-11-22 04:15:48 PST
Committed
286948@main
(11d3279e0479): <
https://commits.webkit.org/286948@main
> Reviewed commits have been landed. Closing PR #37010 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug