LibWebRTCAudioModule does not need to nullify its log timer rdar://140405398 https://bugs.webkit.org/show_bug.cgi?id=283547

Reviewed by Jean-Yves Avenard.

LibWebRTCAudioModule is now sure to be destroyed in main thread as it is noted as DestructionThread::Main.
We can thus change its log timer to be a Timer instead of a unique_ptr<Timer>.
And we can remove the code that makes sure to destroy the Timer in main thread.

* Source/WebCore/platform/mediastream/libwebrtc/LibWebRTCAudioModule.cpp:
(WebCore::LibWebRTCAudioModule::LibWebRTCAudioModule):
(WebCore::LibWebRTCAudioModule::~LibWebRTCAudioModule):
(WebCore::LibWebRTCAudioModule::StartPlayout):
(WebCore::LibWebRTCAudioModule::StopPlayout):
(WebCore::LibWebRTCAudioModule::pollAudioData):
(WebCore::LibWebRTCAudioModule::Terminate): Deleted.
* Source/WebCore/platform/mediastream/libwebrtc/LibWebRTCAudioModule.h:
(WebCore::LibWebRTCAudioModule::stop): Deleted.
* Source/WebCore/platform/mediastream/libwebrtc/LibWebRTCProvider.cpp:
(WebCore::LibWebRTCProvider::~LibWebRTCProvider):

Canonical link: https://commits.webkit.org/286948@main